# trabalho-3-1-autocomplete-atdayan

./: CMakeLists.txt  README.md
data/: test-cities-50.txt  test-wik-sorted.txt
data/tests/: cities.txt  wiktionary.txt
include/: Database.hpp  IOManager.hpp  QueryProcessor.hpp  Result.hpp
src/: Autocomplete.cpp  Database.cpp  IOManager.cpp  Result.cpp
